fixes main navigation menu buttons from shifting other buttons onclick

--- a/public/stylesheets/foundation.css
+++ b/public/stylesheets/foundation.css
@@ -12,6 +12,7 @@ body {
   line-height: 2em;
   font-family: "IBM Plex Mono", monospace;
   color: #4d4d4d;
+  /* background-color: rgb(246, 250, 250); */
 }
 .hidden {
   display: none;
@@ -178,6 +179,8 @@ h3 {
 }
 
 .nav__menu div {
+  width: 130px;
+  height: 50px;
   text-align: center;
   border-bottom: 2px solid white;
   color: white;
